Fix issue with broken info box

--- a/Bursztynorama/ClientApp/src/app/sea-temperature/sea-temperature.component.scss
+++ b/Bursztynorama/ClientApp/src/app/sea-temperature/sea-temperature.component.scss
@@ -24,3 +24,8 @@
 app-popup {
   margin-right: 20px;
 }
+
+.description {
+  display: flex;
+  flex-direction: row;
+}
