--- a/Bursztynorama/ClientApp/src/app/wind-speed/wind-speed.component.scss
+++ b/Bursztynorama/ClientApp/src/app/wind-speed/wind-speed.component.scss
@@ -25,3 +25,7 @@ app-popup {
   margin-right: 20px;
 }
 
+.description {
+  display: flex;
+  flex-direction: row;
+}
